# Dusk

./: .env.example  .gitignore  .replit  FIRESTORE_SECURITY_RULES.md  README.md  build.gradle.kts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  replit.nix  settings.gradle.kts
.agents/: agent_assets_metadata.toml
.circleci/: config.yml
.github/workflows/: build-apk.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
docs/superpowers/plans/: 2026-04-27-dusk-production-gaps.md
docs/superpowers/specs/: 2026-04-27-dusk-production-gaps-design.md
gradle/: libs.versions.toml
plan_migration/: plan.md
scripts/: generate-github-secrets.sh
services/api-server/: package.json
services/api-server/src/: app.ts  index.ts
services/api-server/src/lib/: astra.ts  events.ts  kafka.ts  neon.ts  paypal.ts  push.ts  r2.ts  rabbitmq.ts  redis.ts  resend.ts
services/api-server/src/middleware/: auth.ts
services/api-server/src/routes/: email.ts  events.ts  index.ts  media.ts  (+4 more)
services/feed-service/: build.sbt  start.sh
services/media-service/: CMakeLists.txt  start.sh
services/media-service/src/: main.cpp
services/ml-service/: manage.py  start.sh
services/ml-service/ml_service/: settings.py  urls.py  wsgi.py
services/ml-service/nsfw/: urls.py  views.py
services/ml-service/recommendations/: urls.py  views.py
services/ml-service/trending/: urls.py  views.py
services/rate-limiter/: Cargo.toml  start.sh
services/rate-limiter/src/: main.rs
services/realtime-service/: pom.xml  start.sh
(+76 files in other folders)
