[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rate-limiter"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dashmap = "5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"

[profile.release]
opt-level = 3
